[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Enimies/Boss/BossFinal/TurretBossFinal.gd" type="Script" id=1]
[ext_resource path="res://Engine/HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Engine/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sprites/torreta.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.426, 25.5625 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28.0855, 25.5625 )

[node name="TurretBossFinal" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 64
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HurtBox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 3 )]
MaxHealth = 40

[node name="Timer_pow1" type="Timer" parent="."]

[node name="Timer_shoot" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Timer_change_dir" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="Timer_pow1" to="." method="_on_Timer_pow1_timeout"]
[connection signal="timeout" from="Timer_change_dir" to="." method="_on_Timer_change_dir_timeout"]

[editable path="HurtBox"]
